--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-html-parser": "^6.1.5"
   },
   "devDependencies": {
+    "http-server": "^14.1.1",
     "@types/node": "^18.15.11",
     "prettier": "2.8.7",
     "prisma": "^4.12.0",
@@ -21,6 +22,7 @@
     "typescript": "^5.0.3"
   },
   "scripts": {
-    "start": "tsc && node dist/index.js"
+    "start": "tsc && node dist/index.js",
+    "ws": "cd web && http-server -p 80"
   }
 }
