--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
   "dependencies": {
     "@fastify/cors": "^8.2.1",
     "@prisma/client": "^4.12.0",
+    "@types/node-fetch": "^2.6.3",
     "dotenv": "^16.0.3",
     "fastify": "^4.15.0",
     "html-entities": "^2.3.3",
+    "isomorphic-fetch": "^3.0.0",
     "node-html-parser": "^6.1.5"
   },
   "devDependencies": {
-    "http-server": "^14.1.1",
     "@types/node": "^18.15.11",
+    "http-server": "^14.1.1",
     "prettier": "2.8.7",
     "prisma": "^4.12.0",
     "tsc": "^2.0.4",
